k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: franck-barry
  labels:
    app: backend-api
    owner: franck.barry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: ghcr.io/jaims-31/bilan-ecf-back:latest
        ports:
        - containerPort: 8080
