k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: franck-barry
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: backend-api
